Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3497,6 +3497,7 @@ input, select, textarea {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	border-bottom: none;
 }
 
 #navbar ul li a:hover {
